@@ -244,7 +244,7 @@ public class DefaultCategoryDataset extends AbstractDataset
      */
     public void addValue(double value, Comparable rowKey,
                          Comparable columnKey) {
-        addValue(new Double(value), rowKey, columnKey);
+        addValue(Double.valueOf(value), rowKey, columnKey);
     }
 
     /**
@@ -275,7 +275,7 @@ public class DefaultCategoryDataset extends AbstractDataset
      */
     public void setValue(double value, Comparable rowKey,
                          Comparable columnKey) {
-        setValue(new Double(value), rowKey, columnKey);
+        setValue(Double.valueOf(value), rowKey, columnKey);
     }
 
     /**
